Added safety features based on Code Review question
https://codereview.stackexchange.com/a/249125/227582

--- a/Code Modules/Demo Modules/DemoParent2.cls
+++ b/Code Modules/Demo Modules/DemoParent2.cls
@@ -2,7 +2,7 @@ VERSION 1.0 CLASS
 BEGIN
   MultiUse = -1  'True
 END
-Attribute VB_Name = "DemoParent"
+Attribute VB_Name = "DemoParent2"
 Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = False
@@ -11,17 +11,27 @@ Option Explicit
 
 Implements IWeakable
 
-Private m_child As DemoChild
+Private m_children As Collection
 
-Public Property Set Child(ch As DemoChild)
-    Set m_child = ch
+Private Sub Class_Initialize()
+    Set m_children = New Collection
+End Sub
+
+Public Sub AddChild(ch As DemoChild2)
+    m_children.Add ch
+    ch.Name = "Child " & m_children.Count
+End Sub
+
+Public Property Get Child(index_ As Long) As DemoChild2
+    Set Child = m_children(index_)
 End Property
-Public Property Get Child() As DemoChild
-    Set Child = m_child
+
+Public Property Get ChildCount()
+    ChildCount = m_children.Count
 End Property
 
 Private Sub Class_Terminate()
-    Set m_child = Nothing
+    Set m_children = Nothing
     Debug.Print "Parent terminated " & Now
 End Sub
 
@@ -29,3 +39,4 @@ Private Sub IWeakable_AddWeakRef(wRef As WeakReference)
     Static informer As New WeakRefInformer
     informer.AddWeakRef wRef, Me
 End Sub
+
