--- a/src/Demo/DemoChild2.cls
+++ b/src/Demo/DemoChild2.cls
@@ -12,7 +12,7 @@ Option Explicit
 Private m_parent As WeakReference
 Private m_name As String
 
-Public Property Set Parent(newParent As DemoParent2)
+Public Property Set Parent(ByVal newParent As DemoParent2)
     Set m_parent = New WeakReference
     Set m_parent.Object = newParent
 End Property
@@ -24,7 +24,7 @@ Private Sub Class_Terminate()
     Debug.Print m_name & " terminated " & Now
 End Sub
 
-Public Property Let Name(newName As String)
+Public Property Let Name(ByVal newName As String)
     m_name = newName
 End Property
 Public Property Get Name() As String
